--- a/assets/styles/scss/partials/base/_var.scss
+++ b/assets/styles/scss/partials/base/_var.scss
@@ -4,6 +4,9 @@ $primaryColor  :#0A2A66;
 $secondaryColor:#F2C53D;
 $shadow        : #000000aa;
 $accent        : #e7e7e7;
+$pad           : 3rem;
+$md            : 780px;
+$sm            : 520px;
 
 %transition {
     transition: .5s;
