faq and nav change

--- a/assets/styles/scss/partials/base/_root.scss
+++ b/assets/styles/scss/partials/base/_root.scss
@@ -25,3 +25,11 @@ body {
 .apply-link {
     @include btn(1.2rem);
 }
+
+.faq {
+    width      : 100%;
+    display    : grid;
+    margin-top : 2rem;
+    gap        : 1.5rem;
+    place-items: center;
+}
